--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Stefan's Portfolio Website</title>
+  <title>Stefan's Test Website</title>
 </head>
 
 <body>
-  <h1>Stefan's Portfolio Website</h1>
+  <h1>Stefan's Test Website</h1>
   <h2>I am a Web UX Designer / Future Frontend Developer</h2>
   <hr>
   <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
